# thesis

./: .gitignore  README.md  dist_utils.py  environment.yml  fineweb.py  job.slurm  pyproject.toml  requirements.txt  setup.py  test.py  utils.py
benchmarks/: hellaswag.py
data/: fineweb.py  tinystories.py
inference/: inference.py
log/: log.txt
model/: __init__.py  dataloader.py  model.py  moe.py  rope.py  stu.py  stu_utils.py  tokenizer.py  transformer.py
pretrain/: non_della_pretrain.py  pretrain.py
tests/: benchmarks.py  shakespeare.py  tokenizer.py
utils/: download.sh  non_della_dist_utils.py  utils.py
